Attempt to fix the product sheet images so that they resize when initial dimensions are too small

--- a/public/stylesheets/product.css
+++ b/public/stylesheets/product.css
@@ -110,6 +110,7 @@ body, html { background-color:white; }
 #picture {
 	margin:auto;
 	display:block;
+	width:230px;
 	
 }
 
